--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,3 @@
-
-## .gitignore
-
-```gitignore
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -124,6 +120,7 @@ dmypy.json
 # Allure reports
 allure_results/
 allure-report/
+allure-results/  # Добавлено для игнорирования папки с результатами тестов
 
 # IDE
 .vscode/
